# proto-v2-engine

./: .env.prod.example  .gitignore  .gitmodules  .pr_smoke.txt  BOUNDARY.md  CHANGELOG.md  LOCK_NOTE.md  Makefile  conftest.py  create_tables.py  create_test_db.py  dev.db  package.json  pyproject.toml  pytest.ini  smoke_engine.py  test.db
.githooks/: commit-msg
.github/: CODEOWNERS  pull_request_template.md
AUDIT_PACKAGE/: HUMAN_IN_THE_LOOP.md  LOOP_CONSTITUTION.md  SYSTEM_OVERVIEW.md  TASK_LOOP_SCHEMA.yaml
GOVERNANCE/: AGENT_CONSTITUTION.md  FAILURE_POLICY.md
SCHEMAS/: TASK_LOOP.schema.yaml
adapters/: prelude_adapter.py  sentinel_observer_connector.py
apps/: ui_domain_event_viewer.py
audits/: audit_schema.lock2.json  observer_event.schema.lock3.json  replay_packet.schema.lock3.json
auralis_v1/: docker-compose.yml
cli/: auto_quarantine.py  build_orch_inbox.py  card_stats.py  consume_queue.py  daily_report.py  fix_pack.py  make_execution_request.py  outcome_patch.py  review_patch.py  trade_logger.py
constitution/: CONSTITUTION_MAP.md
contracts/: adapter_registry.schema.json  gate_findings.schema.json  (+3 more)
sentinel_domain/: pyproject.toml
sentinel_domain/adapters/market/: base.py  bybit_rest.py
sentinel_domain/features/: indicators.py  snapshot_builder.py
sentinel_domain/sentinel/: DOMAIN.md  __init__.py
sentinel_domain/sentinel/adapter/: __init__.py  observer_adapter.py  observer_event_sink.py
sentinel_domain/sentinel/analyzer/: __init__.py  internal_guard.py
sentinel_domain/sentinel/feeds/: __init__.py  base.py  ccxt_provider.py  yfinance_provider.py
sentinel_domain/sentinel/schemas/: internal_exec_intent.v1.json  sentinel_trade_intent.v1.json
sentinel_domain/sentinel/tests/: test_ccxt_provider.py  test_internal_track.py  test_observer_event_sink.py  test_simulation_track.py  test_trade_intent_validator.py
sentinel_domain/sentinel/tracks/: __init__.py
sentinel_domain/sentinel/tracks/internal/: __init__.py  audit_writer.py  brokers.py  exec_gate.py
sentinel_domain/sentinel/tracks/simulation/: __init__.py  audit_writer.py  pipeline.py  validators.py
sentinel_domain/services/: snapshot_service.py
(+801 files in other folders)
