[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-domain"
version = "0.1.0"
description = "Standalone Sentinel dual-track domain package"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]
feeds = ["ccxt>=4.0.0", "yfinance>=0.2.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]
